src/main/resources/tests/Semantics/bad/functionReturnType.canAda
with Ada.Text_IO; use Ada.Text_IO;
procedure ExampleProcedure is
X : character;
function ExampleFunction (X : integer) return integer is
begin
   return X + 1;
end ExampleFunction;
begin
   X := ExampleFunction (2); -- Error: type mismatch
end ExampleProcedure;
